# server

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  Makefile  README.md  loginserver.js
.devcontainer/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine.dev  Dockerfile.ubuntu  Dockerfile.ubuntu.dev  devcontainer.json
base/: config.yaml  login.ini
common/: CMakeLists.txt  additive_lagged_fibonacci_engine.h  any.h  base_packet.cpp  base_packet.h  bodytypes.h  classes.cpp  condition.cpp  condition.h  config.cpp  config.h  crash.cpp  crc16.cpp  crc32.cpp  crc32.h  database.cpp  database.h  database_schema.h  dbcore.cpp  deity.h  emu_constants.h  emu_limits.h  emu_opcodes.cpp  emu_opcodes.h  emu_oplist.h  emu_tcp_connection.cpp  emu_tcp_connection.h  emu_tcp_server.cpp  emu_tcp_server.h  emu_versions.cpp  emu_versions.h  eq_constants.h  eq_limits.cpp  eq_limits.h  eq_packet.cpp  eq_packet.h  eq_packet_structs.h  eq_stream.cpp  eq_stream.h  eq_stream_factory.cpp  (+123 more)
dependencies/: .gitignore  README.md
eqlaunch/: eqlaunch.cpp  worldserver.cpp  worldserver.h  zone_launch.cpp  zone_launch.h
login/: CMakeLists.txt  client.cpp  client_manager.cpp  client_manager.h  config.h  database.cpp  database.h  eq_crypto.cpp  login_server.h  main.cpp  server_manager.cpp  world_server.cpp
loginserver/: client.cpp  client.h  config.cpp  config.h  database.cpp  database.h  eq_crypto.h  login_server.h  login_structures.h  main.cpp  server_manager.cpp  world_server.cpp  world_server.h
queryserv/: CMakeLists.txt  database.cpp  database.h  dbupdate.cpp  main.cpp  queryserv.cpp  queryservconfig.cpp  queryservconfig.h  worldserver.cpp  worldserver.h
shared_memory/: CMakeLists.txt  base_data.cpp  base_data.h  items.cpp  items.h  loot.cpp  loot.h  main.cpp  npc_faction.cpp  npc_faction.h  skill_caps.cpp  skill_caps.h  spells.cpp  spells.h
tests/: CMakeLists.txt  atobool_test.h  data_verification_test.h  fixed_memory_test.h  fixed_memory_variable_test.h  hextoi_32_64_test.h  ipc_mutex_test.h  main.cpp  memory_mapped_file_test.h  skills_util_test.h  string_util_test.h
ucs/: CMakeLists.txt  chatchannel.cpp  chatchannel.h  clientlist.cpp  clientlist.h  database.cpp  database.h  main.cpp  ucs.cpp  ucsconfig.cpp  ucsconfig.h  worldserver.cpp  worldserver.h
world/: CMakeLists.txt  client.cpp  cliententry.cpp  cliententry.h  clientlist.cpp  clientlist.h  console.cpp  console.h  main.h  (+34 more)
zone/: CMakeLists.txt  aa.cpp  aa.h  aggro.cpp  attack.cpp  beacon.cpp  bonuses.cpp  buffstacking.cpp  client.cpp  client.h  client_mods.cpp  client_packet.cpp  client_process.cpp  command.cpp  common.h  corpse.cpp  corpse.h  doors.cpp  effects.cpp  entity.cpp  event_codes.h  exp.cpp  fearpath.cpp  forage.cpp  groups.cpp  groups.h  hate_list.cpp  horse.cpp  horse.h  inventory.cpp  loottables.cpp  lua_bit.cpp  lua_client.cpp  lua_client.h  lua_corpse.h  lua_entity.cpp  lua_entity_list.cpp  lua_entity_list.h  lua_general.cpp  lua_group.cpp  (+67 more)
zone/lua/: lua_client.cpp  lua_client.h  lua_client_impl.cpp  lua_corpse.cpp  lua_corpse.h  lua_corpse_impl.cpp  lua_door.cpp  lua_door.h  lua_door_impl.cpp  lua_encounter.cpp  lua_encounter.h  lua_entity.cpp  lua_entity.h  lua_entity_impl.cpp  lua_entity_list.cpp  lua_entity_list.h  lua_entity_list_impl.cpp  lua_expedition.h  lua_forward.h  lua_general.cpp  lua_general.h  lua_general_enums.cpp  lua_general_rule.cpp  lua_group.cpp  lua_group.h  lua_group_impl.cpp  lua_hate_item_impl.cpp  lua_hate_iteminst_impl.cpp  lua_hate_list.cpp  lua_hate_list.h  lua_hate_list_impl.cpp  lua_inventory.cpp  lua_inventory.h  lua_inventory_impl.cpp  lua_item.cpp  lua_item.h  lua_item_impl.cpp  lua_iteminst.cpp  lua_iteminst.h  lua_iteminst_impl.cpp  (+29 more)
(+198 files in other folders)
