CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(zone_sources
	aa.cpp
	aggro.cpp
	attack.cpp
	beacon.cpp
	bonuses.cpp
	buffstacking.cpp
	client.cpp
	client_mods.cpp
	client_packet.cpp
	client_process.cpp
	command.cpp
	corpse.cpp
	doors.cpp
	effects.cpp
	encounter.cpp
	entity.cpp
	exp.cpp
	fearpath.cpp
	forage.cpp
	groups.cpp
	guild.cpp
	guild_mgr.cpp
	hate_list.cpp
	horse.cpp
	inventory.cpp
	loottables.cpp
	lua/lua_corpse.cpp
	lua/lua_corpse_impl.cpp
	lua/lua_client.cpp
	lua/lua_client_impl.cpp
	lua/lua_door.cpp
	lua/lua_door_impl.cpp
	lua/lua_encounter.cpp
	lua/lua_entity.cpp
	lua/lua_entity_impl.cpp
	lua/lua_entity_list.cpp
	lua/lua_entity_list_impl.cpp
	lua/lua_general.cpp
	lua/lua_general_enums.cpp
	lua/lua_general_rule.cpp
	lua/lua_group.cpp
	lua/lua_group_impl.cpp
	lua/lua_hate_list.cpp
	lua/lua_hate_list_impl.cpp
	lua/lua_inventory.cpp
	lua/lua_inventory_impl.cpp
	lua/lua_item.cpp
	lua/lua_item_impl.cpp
	lua/lua_iteminst.cpp
	lua/lua_iteminst_impl.cpp
	lua/lua_mob.cpp
	lua/lua_mob_impl.cpp
	lua/lua_npc.cpp
	lua/lua_npc_impl.cpp
	lua/lua_object.cpp
	lua/lua_object_impl.cpp
	lua/lua_packet.cpp
	lua/lua_packet_impl.cpp
	lua/lua_parser.cpp
	lua/lua_parser_events.cpp
	lua/lua_raid.cpp
	lua/lua_raid_impl.cpp
	lua/lua_spawn.cpp
	lua/lua_spawn_impl.cpp
	lua/lua_spell.cpp
	lua/lua_spell_impl.cpp
	entity.cpp
	exp.cpp
	fearpath.cpp
	forage.cpp
	groups.cpp
	guild.cpp
	guild_mgr.cpp
	hate_list.cpp
	horse.cpp
	inventory.cpp
	loottables.cpp
	main.cpp
	map.cpp
	mob.cpp
	mob_ai.cpp
	mob_movement_manager.cpp
	npc.cpp
	object.cpp
	oriented_bounding_box.cpp
	pathfinder_interface.cpp
	pathfinder_nav_mesh.cpp
	pathfinder_null.cpp
	pathfinder_waypoint.cpp
	pathing.cpp
	petitions.cpp
	pets.cpp
	position.cpp
	qglobals.cpp
	queryserv.cpp
	questmgr.cpp
	quest_parser_collection.cpp
	raids.cpp
	raycast_mesh.cpp
	spawn2.cpp
	spawngroup.cpp
	special_attacks.cpp
	spell_effects.cpp
	spells.cpp
	titles.cpp
	tradeskills.cpp
	trading.cpp
	trap.cpp
	water_map.cpp
	water_map_v1.cpp
	water_map_v2.cpp
	waypoints.cpp
	worldserver.cpp
	zone.cpp
	zone_config.cpp
	zonedb.cpp
	zoning.cpp
)

SET(zone_headers
	aa.h
	beacon.h
	client.h
	client_packet.h
	command.h
	common.h
	corpse.h
	doors.h
	encounter.h
	entity.h
	errmsg.h
	event_codes.h
	forage.h
	groups.h
	guild_mgr.h
	hate_list.h
	horse.h
	lua/lua_client.h
	lua/lua_corpse.h
	lua/lua_encounter.h
	lua/lua_entity.h
	lua/lua_entity_list.h
	lua/lua_forward.h
	lua/lua_general.h
	lua/lua_group.h
	lua/lua_hate_list.h
	lua/lua_inventory.h
	lua/lua_item.h
	lua/lua_iteminst.h
	lua/lua_mob.h
	lua/lua_npc.h
	lua/lua_object.h
	lua/lua_packet.h
	lua/lua_parser.h
	lua/lua_parser_events.h
	lua/lua_ptr.h
	lua/lua_raid.h
	lua/lua_spawn.h
	lua/lua_spell.h
	map.h
	masterentity.h
	mob.h
	mob_movement_manager.h
	npc.h
	object.h
	oriented_bounding_box.h
	pathfinder_interface.h
	pathfinder_nav_mesh.h
	pathfinder_null.h
	pathfinder_waypoint.h
	petitions.h
	pets.h
	position.h
	qglobals.h
	quest_interface.h
	queryserv.h
	quest_interface.h
	questmgr.h
	quest_parser_collection.h
	raids.h
	raycast_mesh.h
	spawn2.h
	spawngroup.h
	string_ids.h
	titles.h
	trap.h
	water_map.h
	water_map_v1.h
	water_map_v2.h
	worldserver.h
	zone.h
	zone_config.h
	zonedb.h
	zonedump.h
)

IF(EQEMU_DEPOP_INVALIDATES_CACHE)
	ADD_DEFINITIONS(-DDEPOP_INVALIDATES_NPC_TYPES_CACHE)
ENDIF(EQEMU_DEPOP_INVALIDATES_CACHE)

ADD_EXECUTABLE(zone ${zone_sources} ${zone_headers})

INSTALL(TARGETS zone RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

ADD_DEFINITIONS(-DZONE)

TARGET_LINK_LIBRARIES(zone ${SERVER_LIBS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
